scrollbar fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,7 @@ body {
   background-position: center; 
   background-repeat: repeat-y;
   background-color: $primary-color;
+  overflow-y: hidden;
 }
 
 h1 {
